fix:测试用例无法正常执行